actualizacion endpoint por ambientes

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ yarn-error.log
 testem.log
 /typings
 Dockerfile
+production.Dockerfile
+docker-compose.override.yml
+
 
 # System Files
 .DS_Store
